[package]
name = "once_barrier"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
